--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,8 +1,21 @@
 <% provide(:title, 'About us') %>
 <h1>About Us</h1>
 <p>
-The <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-is a project to make a book and screencasts to teach web development with 
-<a href="http://rubyonrails.org/">Ruby on rails</a>. This is the 
-sample application for the tutorial
+<%= link_to("ThankTheTeacher.com", root_path) %> helps parents say thank you to our kids' teachers. 
+We make it easy for Parent Teacher Organizations to create a page where parents may 
+give money for teacher gift cards. We handle the transaction and add up the donations so ordering 
+gift cards is a snap. And, we buy our gift cards from <a href="http://shopwithscrip.com">SCRIP</a> 
+so your school's Parent Teacher Organization gets a portion of the total purchase.
+</p>
+<p>
+If you have questions, suggestions, or need help,
+please contact <a href="mailto: matthew.r.newell@gmail.com">Matthew Newell</a>.
+</p>
+<br>
+<h4>Site Construction</h4>
+<p>
+Thank the Teacher is built on <a href="http://rubyonrails.org">Ruby on Rails</a>. 
+The source code relies heavily upon on Mike Hartl's <a href="http://railstutorial.org">Rails Tutorial</a>
+and the book 
+<a href="http://http://pragprog.com/book/rails4/agile-web-development-with-rails-4">Agile Web Development with Rails 4</a> by Sam Ruby.
 </p>
