--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,12 @@
 <div class="center hero-unit">
-  <h1>Welcome to the Sample App</h1>
+  <h1>Parent Funded Gift Cards</h1>
+  <h1>for Teachers</h1>
   <h2>
-    This is the home page for the
-    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application
+    Say thanks with a
+    <%= link_to("gift", tour_path) %>  they will really appreciate.
   </h2>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+  <%= link_to "Take the Tour", signup_path, class: "btn btn-large btn-primary" %>
 </div>
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/'%>
+<%= link_to image_tag("img-giftcards.jpg", :height => "30%", :width => "30%",
+                        alt: "Teachers love Giftcards!"), about_path%>
