--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,5 +8,5 @@
 
   <%= link_to "Take the Tour", signup_path, class: "btn btn-large btn-primary" %>
 </div>
-<%= link_to image_tag("img-giftcards.jpg", :height => "30%", :width => "30%",
+<%= link_to image_tag("img-giftcards.jpg",
                         alt: "Teachers love Giftcards!"), about_path%>
