--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
       <%= link_to "Thank the Teacher", root_path, id: "logo" %>
       <nav>
         <ul class="nav pull-right">
-          <li><%= link_to "Browse Schools", '#'  %></li>
+          <li><%= link_to "Campaigns", campaigns_path  %></li>
           <li><%= link_to "Help",  help_path %></li>
           <% if signed_in? %>
             <li><%= link_to "Users", users_path %></li>
@@ -13,8 +13,8 @@
               Account <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Profile", current_user %></li>
-              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+              <li><%= link_to "My Account", current_user %></li>
+              <li><%= link_to "Profile", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "Sign out", signout_path, method: "delete" %>
