--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,12 @@
 <% provide(:title, 'All users') %>
 <h1>All users</h1>
+<h5>This page should only be visible by admin users and a delete user button should be visible. text with exampleuser (admin role)</h5>
 
 <%= will_paginate %>
 
 <ul class="users">
   <% @users.each do |user| %>
-    <%= render @users %>
+    <%= render user %>
   <% end %>
 </ul>
 
