--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -17,14 +17,11 @@
   <tbody>
     <% @campaigns.each do |campaign| %>
       <tr>
-        <td><%= campaign.title %></td>
+        <td><%= link_to campaign.title, campaign %></td>
         <td><%= campaign.description %></td>
         <td><%= campaign.end_date %></td>
         <td><%= campaign.user.name %></td>
         <td><%= campaign.recipient_id %></td>
-        <td><%= link_to 'Show', campaign %></td>
-        <td><%= link_to 'Edit', edit_campaign_path(campaign) %></td>
-        <td><%= link_to 'Destroy', campaign, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -32,4 +29,3 @@
 
 <br>
 
-<%= link_to 'New Campaign', new_campaign_path %>
