--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to "My Account", current_user %></li>
-              <li><%= link_to "Profile", edit_user_path(current_user) %></li>
+              <li><%= link_to "Edit Profile", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "Sign out", signout_path, method: "delete" %>
