--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -1,29 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @campaign.title %>
-</p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @campaign.description %>
-</p>
 
-<p>
-  <strong>End date:</strong>
-  <%= @campaign.end_date %>
-</p>
+<div>
+  <h3> <%= @campaign.title %> </h3>
+  <h4> <%= @campaign.description %></h4>
+  <h5> End Date: <%= @campaign.end_date %></h5>
+  <h5> Created by: <%= @campaign.user.name %></h5>
+</div>
 
-<p>
-  <strong>User:</strong>
-  <%= @campaign.user.name %>
-</p>
 
-<p>
-  <strong>Recipient:</strong>
-  <%= @campaign.recipient_id %>
-</p>
-
-<%= link_to 'Edit', edit_campaign_path(@campaign) %> |
-<%= link_to 'Back', campaigns_path %>
+  <% if @user.recipients.any? %>
+    <p class="recipients">
+      <%= render @recipients %>
+    </p>
+    <%= will_paginate @recipients %>
+  <% else %>
+    <p>arrgh</p>
+  <% end %>
