--- a/app/views/users/_fields.html.erb
+++ b/app/views/users/_fields.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/error_messages' %>
 
-<%= f.label :name %>
+<%= f.label :name, "Screen Name" %>
 <%= f.text_field :name %>
 
 <%= f.label :email %>
