--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
     <%= link_to("gift", tour_path) %>  they will really appreciate.
   </h2>
 
-  <%= link_to "Take the Tour", signup_path, class: "btn btn-large btn-primary" %>
+  <%= link_to "Sign up", signup_path, class: "btn btn-large btn-primary" %>
 </div>
 <%= link_to image_tag("img-giftcards.jpg",
                         alt: "Teachers love Giftcards!"), about_path%>
