--- a/app/views/static_pages/tour.html.erb
+++ b/app/views/static_pages/tour.html.erb
@@ -1,6 +1,15 @@
 <% provide(:title, 'Tour') %>
 <h1>Tour</h1>
 <p>
-This is where we will describe the problem, solution, and how to use this site"
+This is where we will describe the problem, solution, and how to use this site. The story sort of goes like this...
+</p>
+<ul>
+  <li> Our teachers work hard for our kids. giftcards are a nice way to say thanks </li>
+  <li> The problem: many different parents want to say thanks to many different teachers</li>
+  <li> TTT helps a volunteer from your schools Parent Teacher Organization create a web page where parents may select how much they want to give and who they want to give to</li>
+  <li>then, we handle the transaction and sum up the donations from all the parents so that ordering the gift cards is easy</li>
+  <li>and its better than free when you order the cards from your schools SCRIP program. Your parent organization will get a portion of the total purchase</li>
+</ul>
+<p> Ready to <%=link_to "Sign up", signup_path %>? Or, if you have any questions, please <%=link_to "Contact me", about_path %>.
 </p>
 
