--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -4,9 +4,9 @@
 
 <div>
   <h3> <%= @campaign.title %> </h3>
-  <h4> <%= @campaign.description %></h4>
   <h5> End Date: <%= @campaign.end_date %></h5>
   <h5> Created by: <%= @campaign.user.name %></h5>
+  <body> <%= @campaign.description %></body>
 </div>
 
 
@@ -16,5 +16,5 @@
     </p>
     <%= will_paginate @recipients %>
   <% else %>
-    <p>arrgh</p>
+    <p>Next step: add some <%= link_to 'recipients', new_recipient_path %> to your giftcard campaign!</p>
   <% end %>
