--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
   <ul>
     <li><%= link_to "Tour", tour_path  %></li>
     <li><%= link_to "About",   about_path %></li>
-    <li><a href="http://news.railstutorial.org/">News</a></li>
+    <li><%= link_to "News", "#" %></li>
   </ul>
   </nav>
   </footer>
