--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,8 +1,8 @@
 <% provide(:title, 'Help') %>
 <h1>Help</h1>
-<p>
-  Get help on the Ruby on Rails Tutorial at the
-  <a href="http://railstutorial.org/help">Rails Tutorial help page</a>
-  To get help on this sample app, see the 
-  <a href="http://railstutorial.org/book">Rails Tutorial book</a>
-</p>
+<h5>Definitions</h5>
+<ul>
+  <li>Campaigns are created by users to launch a giftcard program for your school.</li>
+  <li>Recipients are all of the lucky teachers that will be getting giftcards.</li>
+  <li>other helpful stuff</li>
+</ul>
