--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -1,5 +1,8 @@
 <h1>Active Gift Card Campaigns</h1>
 
+<div class="row">
+
+<div class="span8">
 <table class = "table table-striped">
   <thead>
     <tr>
@@ -19,6 +22,7 @@
     <% end %>
   </tbody>
 </table>
-
+</div>
+</div>
 <br>
 
