--- a/app/views/recipients/_recipient.html.erb
+++ b/app/views/recipients/_recipient.html.erb
@@ -1,9 +1,11 @@
 <table>
+  
   <tr>
-    <td> <%= button_to 'Thanks', line_items_path(recipient_id: recipient), class: "btn-mini" %>
+    <td> <%= button_to 'Thanks', line_items_path(recipient_id: recipient), class: "btn-mini btn-primary"  %>
     </td>
     <td>
       <body><%= recipient.first_name %> <%= recipient.last_name %>
+      
       </body><br>
       <span class="timestamp"> <%= recipient.title %> </span>
     </td>
