--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,8 +2,7 @@
   <h1>Parent Funded Gift Cards</h1>
   <h1>for Teachers</h1>
   <h2>
-    Say thanks with a
-    <%= link_to("gift", tour_path) %>  they will really appreciate.
+    Say <%= link_to "thanks", tour_path %> with a gift they will really appreciate.
   </h2>
 
   <%= link_to "Sign up", signup_path, class: "btn btn-large btn-primary" %>
