--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Sign up') %>
 <h1>Sign up</h1>
 <p class="text-center"><i>
-  Registration is intended for the parent volunteer that is running the giftcard campaign. <br>
+  Registration is for the parent volunteer running your school or classroom's giftcard campaign. <br>
   Not sure how this works? take the <%= link_to "tour", tour_path %> and then decide if you want to sign up.
 </i></p>
 
