--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -12,5 +12,6 @@
   </tr>
 </table>
 
+  <%= button_to 'Checkout', new_order_path, method: :get, class: "btn-small btn-primary"  %>
   <%= button_to 'Empty cart', @cart, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn-small btn-primary" %>
 <% end %>
