--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
   <nav>
   <ul>
     <li><%= link_to "Tour", tour_path  %></li>
-    <li><%= link_to "About",   about_path %></li>
+    <li><%= link_to "Help",   help_path %></li>
     <li><%= link_to "News", "#" %></li>
   </ul>
   </nav>
