--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,21 +1,21 @@
 <% provide(:title, 'About us') %>
-<h1>About Us</h1>
-<p>
-<%= link_to("ThankTheTeacher.com", root_path) %> helps parents say thank you to our kids' teachers. 
-We make it easy for Parent Teacher Organizations to create a page where parents may 
-give money for teacher gift cards. We handle the transaction and add up the donations so ordering 
-gift cards is a snap. And, we buy our gift cards from <a href="http://shopwithscrip.com">SCRIP</a> 
-so your school's Parent Teacher Organization gets a portion of the total purchase.
+<%= image_tag("earthday.jpg") %>
+<div class="row">
+<div class="span0">
+</div>
+<div class="span11">
+<h3>It Started with Earth Day</h3>
+<p> We have a really good EarthDay at my kids' elementary school. Every year we plant lots of trees and flowers. The program is funded by our school's Parent Teacher Organization.</p>
+<p>Our school's Parent Teacher Organization runs an extremely successful giftcard program. Thanks to generous parents, hardworking volunteers, and an outstanding giftcard referral program, both the school's staff and the school's Parent Teacher Organization benefit. Proceeds from he program help buy our plants for Earth Day.</p> 
+
+<p>Although the program is successful, it also requires a lot of manual processing. 
+We created ThankTheTeacher.com to help solve this problem and make saying thanks a snap. We hope you enjoy the service and enjoy the 3% cash back to your school's Parent Teacher Organization. That can buy a lot of trees!
 </p>
+<br>
 <p>
 If you have questions, suggestions, or need help,
 please contact <a href="mailto: matthew.r.newell@gmail.com">Matthew Newell</a>.
 </p>
-<br>
-<h4>Site Construction</h4>
-<p>
-Thank the Teacher is built on <a href="http://rubyonrails.org">Ruby on Rails</a>. 
-The source code relies heavily upon on Mike Hartl's <a href="http://railstutorial.org">Rails Tutorial</a>
-and the book 
-<a href="http://http://pragprog.com/book/rails4/agile-web-development-with-rails-4">Agile Web Development with Rails 4</a> by Sam Ruby.
-</p>
+</div>
+</div>
+
