--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -1,6 +1,13 @@
 <h1>Active Gift Card Campaigns</h1>
 
 <div class="row">
+<aside class="span3">
+    <section>
+    
+   
+    </section>
+  </aside>
+
 
 <div class="span8">
 <table class = "table table-striped">
