--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,11 +5,10 @@
 </div>
 <div class="span11">
 <h3>It Started with Earth Day</h3>
-<p> We have a really good EarthDay at my kids' elementary school. Every year we plant lots of trees and flowers. The program is funded by our school's Parent Teacher Organization.</p>
 <p>Our school's Parent Teacher Organization runs an extremely successful giftcard program. Thanks to generous parents, hardworking volunteers, and an outstanding giftcard referral program, both the school's staff and the school's Parent Teacher Organization benefit. Proceeds from he program help buy our plants for Earth Day.</p> 
 
 <p>Although the program is successful, it also requires a lot of manual processing. 
-We created ThankTheTeacher.com to help solve this problem and make saying thanks a snap. We hope you enjoy the service and enjoy the 3% cash back to your school's Parent Teacher Organization. That can buy a lot of trees!
+We created ThankTheTeacher.com to help solve this problem and make saying thanks a snap. We hope you enjoy the service and including the 3% cash back that to your school's Parent Teacher Organization. That can buy a lot of trees!
 </p>
 <br>
 <p>
