--- a/app/views/static_pages/tour.html.erb
+++ b/app/views/static_pages/tour.html.erb
@@ -7,13 +7,13 @@
     <div class="item active"><!-- class of active since it's the first item -->
       <img src="http://placehold.it/1200x480" alt="" />
       <div class="carousel-caption">
-        <p>Giftcards are a great way to say thank you to our teachers.</p>
+        <p>Gift Cards are a great way to say thank you to our teachers.</p>
       </div>
     </div>
     <div class="item">
       <img src="http://placehold.it/1200x480" alt="" />
       <div class="carousel-caption">
-        <p>The problem is many different parents want to make a small donation to many different teachers' giftcard accounts. Parent Teacher Organization volunteers have to do a lot of coordinating and calculating and processing and ordering. Its a hassle.</p>
+        <p>The problem is many different parents want to make a small donation to many different teachers' Gift Card account. Parent Teacher Organization volunteers have to do a lot of coordinating and calculating and processing and ordering. Its a hassle.</p>
       </div>
     </div>
     <div class="item">
@@ -25,15 +25,16 @@
     <div class="item">
       <img src="http://placehold.it/1200x480" alt="" />
       <div class="carousel-caption">
-        <p>We safely and securely process the orders and then summarize the donations by teacher. Then, we help the to order the giftcards. </p>
+        <p>We safely and securely process the orders and then summarize the donations by teacher. Then, we help the to order the Gift Cards. </p>
       </div>
     </div>
     <div class="item">
       <img src="http://placehold.it/1200x480" alt="" />
       <div class="carousel-caption">
-        <p>There are no transaction fees and we donate 3% of all giftcard purchases back to your school's Parent Teacher Organization. </p>
+        <p>There are no transaction fees and we donate 3% of all Gift Card purchases back to your school's Parent Teacher Organization. </p>
       </div>
     </div>
+    <br>
     <p class="text-center"> Ready to <%=link_to "Sign up", signup_path %>? Or, if you have any questions, please <%=link_to "Contact me", about_path %>.
     </p>
   </div><!-- /.carousel-inner -->
