--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -6,8 +6,8 @@
 <div class="span11">
 <p>Our school's Parent Teacher Organization runs an extremely successful giftcard program. Thanks to generous parents, hardworking volunteers, and an outstanding giftcard referral program, both the school's staff and the school's Parent Teacher Organization benefit. Proceeds from he program help buy our plants for Earth Day.</p> 
 
-<p>Although the program is successful, it also requires a lot of manual processing. 
-We created ThankTheTeacher.com to help solve this problem and make saying thanks a snap. We hope you enjoy the service and including the 3% cash back that to your school's Parent Teacher Organization. That can buy a lot of trees!
+<p>The program used to require a lot of manual processing. 
+We created ThankTheTeacher.com to facilitate the process and to share our formula for success with others.  We hope you enjoy the service including the <strong>3% cash back</strong> on all purchases that goes to your school's Parent Teacher Organization. That can buy a lot of trees!
 </p>
 <br>
 <p>
