--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -4,16 +4,28 @@
 <div class="span0">
 </div>
 <div class="span11">
-<p>Our school's Parent Teacher Organization runs an extremely successful giftcard program. Thanks to generous parents, hardworking volunteers, and an outstanding giftcard referral program, both the school's staff and the school's Parent Teacher Organization benefit. Proceeds from he program help buy our plants for Earth Day.</p> 
+<br>
+<body>The volunteers at my son's school run an extremely successful Gift Card program. Thanks to generous parents, both the school's staff and the school's Parent Teacher Organization benefit. Proceeds from he program help buy our plants for Earth Day.
+<br>
+<br>
+We created ThankTheTeacher.com to facilitate the Gift Card process and to share our formula for success with others.  We hope you enjoy the service including the <strong>5% cash back</strong> on all purchases that goes to your school's Parent Teacher Organization. That can buy a lot of trees!
 
-<p>The program used to require a lot of manual processing. 
-We created ThankTheTeacher.com to facilitate the process and to share our formula for success with others.  We hope you enjoy the service including the <strong>3% cash back</strong> on all purchases that goes to your school's Parent Teacher Organization. That can buy a lot of trees!
-</p>
+<h4>About Gift Card Commissions</h4>
+We get our Cards from Amazon because they offer a 6% commission on Gift Card purchaces. <br>
+5% goes back to the school. I take 1% to run this site, pay for the credit card transactions, and to fuel my private jet.   
+<br>
+<br>
+
+If you have questions, suggestions, or need help,
+please contact <a href="mailto: matthew.r.newell@gmail.com">Matt</a>.
+</body>
+<br>
+<br>
 <br>
 <p>
-If you have questions, suggestions, or need help,
-please contact <a href="mailto: matthew.r.newell@gmail.com">Matthew Newell</a>.
+  <small>This site was built on software developed by <a href = "http://ruby.railstutorial.org/ruby-on-rails-tutorial-book">Michael Hartl</a>.</small>  
 </p>
+
 </div>
 </div>
 
