--- a/app/views/static_pages/tour.html.erb
+++ b/app/views/static_pages/tour.html.erb
@@ -13,7 +13,7 @@
     <div class="item">
       <img src="http://placehold.it/1200x480" alt="" />
       <div class="carousel-caption">
-        <p>The problem is many different parents want to make a small donation to many different teachers' Gift Card account. Parent Teacher Organization volunteers have to do a lot of coordinating and calculating and processing and ordering. Its a hassle.</p>
+        <p>The problem is many different parents want to make a donation to many different teachers' Gift Card account. Parent Teacher Organization volunteers have to do a lot of coordinating and calculating and processing and ordering. Its a hassle.</p>
       </div>
     </div>
     <div class="item">
@@ -25,17 +25,18 @@
     <div class="item">
       <img src="http://placehold.it/1200x480" alt="" />
       <div class="carousel-caption">
-        <p>We safely and securely process the orders and then summarize the donations by teacher. Then, we help the to order the Gift Cards. </p>
+        <p>We safely and securely process the orders and then summarize the donations by teacher. Then, we help order the Gift Cards. </p>
       </div>
     </div>
     <div class="item">
       <img src="http://placehold.it/1200x480" alt="" />
       <div class="carousel-caption">
-        <p>There are no transaction fees and we donate 3% of all Gift Card purchases back to your school's Parent Teacher Organization. </p>
+        <p>There are no transaction fees and we donate 5% of all Gift Card purchases back to your school's Parent Teacher Organization. </p>
       </div>
     </div>
     <br>
-    <p class="text-center"> Ready to <%=link_to "Sign up", signup_path %>? Or, if you have any questions, please <%=link_to "Contact me", about_path %>.
+
+    <p class="text-center"> <%=link_to "Sign up", signup_path %> | <%=link_to "View example", @campaign %>
     </p>
   </div><!-- /.carousel-inner -->
   <!--  Next and Previous controls below
