type in the statics

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,7 +5,7 @@
 </div>
 <div class="span11">
 <br>
-<body>The volunteers at my son's school run an extremely successful Gift Card program. Thanks to generous parents, both the school's staff and the school's Parent Teacher Organization benefit. Proceeds from he program help buy our plants for Earth Day.
+<body>The parent volunteers at my son's school run an extremely successful Gift Card program. Thanks to generous parents, both the school's staff and the school's Parent Teacher Organization benefit. Proceeds from he program help buy our plants for Earth Day.
 <br>
 <br>
 We created ThankTheTeacher.com to facilitate the Gift Card process and to share our formula for success with others.  We hope you enjoy the service including the <strong>5% cash back</strong> on all purchases that goes to your school's Parent Teacher Organization. That can buy a lot of trees!
