--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -2,12 +2,9 @@
 <div class="row">
 <aside class="span3">
     <section>
-    <em>press refresh to see cart the update (AJAX bug)</em>
-      <h1>
-       
+      <div id="cart">
         <%= render @cart %>
-      </h1>
-   
+      </div>
     </section>
   </aside>
 
