--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -1,4 +1,9 @@
+
+<% if line_item == @current_item %>
+<tr id="current_item">
+<% else %>
 <tr>
+<% end %>
     <td><%= number_to_currency(line_item.quantity) %></td>
     <td><%= line_item.recipient.first_name %> 
         <%= line_item.recipient.last_name %>
