first pass on email confirmation

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -12,7 +12,7 @@ We created ThankTheTeacher.com to facilitate the Gift Card process and to share 
 
 <h4>About Gift Card Commissions</h4>
 We get our Cards from Amazon because they offer a 6% commission on Gift Card purchaces. <br>
-5% goes back to the school. I take 1% to run this site, pay for the credit card transactions, and to fuel my private jet.   
+5% goes back to the school. I take 1% to run the site and pay for the credit card transactions. 
 <br>
 <br>
 
