adds up the orders

--- a/app/views/recipients/_form.html.erb
+++ b/app/views/recipients/_form.html.erb
@@ -24,6 +24,10 @@
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
+  <div class ="field">
+    <%= f.label :campaign_id %><br>
+    <%= f.select :campaign_id, Campaign.all.collect {|c| [ c.title, c.id ] }, { :include_blank => true }%>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
