--- a/app/views/campaigns/_campaign.html.erb
+++ b/app/views/campaigns/_campaign.html.erb
@@ -1,8 +1,25 @@
 <li>
-  <span class="title"><%= campaign.title %> </span>
-  
+  <strong>
+  <%= campaign.title %> <br>
+  </strong>
+   <%= link_to 'Show', campaign %> | <%= link_to 'Edit', edit_campaign_path(campaign) %> | <%= link_to 'Delete', campaign, method: :delete, data: { confirm: 'Are you sure?' } %>  
+  <br>
   <span class="timestamp">
     Created <%= time_ago_in_words(campaign.created_at) %> ago.
-  </span><br>
-<span> <%= link_to 'Show', campaign %> | <%= link_to 'Edit', edit_campaign_path(campaign) %> | <%= link_to 'Destroy', campaign, method: :delete, data: { confirm: 'Are you sure?' } %>  </span>
+  <br>
+  </span>
+<span class="body"> Ends on: <%= campaign.end_date %> <br>
+<% total_contribution = 0 * 1.0%>
+
+<% campaign.recipients.each do | recipient | %>
+  <% total_contribution += recipient.line_items.sum('quantity') %>
+<% end %>
+  Total Contributions: <%= link_to "$#{total_contribution.round(2)}" , orders_path %>
+       <br>
+<% total_commission = ((total_contribution * 1.05) - total_contribution).round(2) %>
+  Total Commission: $<%= total_commission  %>
+       
+       <br>
+       <%= link_to 'Order Giftcards', recipients_path %> 
+ </span>
 </li>
