--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,14 +5,16 @@
 </div>
 <div class="span11">
 <br>
-<body>The parent volunteers at my son's school run an extremely successful Gift Card program. Thanks to generous parents, both the school's staff and the school's Parent Teacher Organization benefit. Proceeds from he program help buy our plants for Earth Day.
+<body>The parent volunteers at my son's school run an extremely successful Gift Card program. Proceeds from he program help buy our plants for Earth Day.
 <br>
 <br>
 We created ThankTheTeacher.com to facilitate the Gift Card process and to share our formula for success with others.  We hope you enjoy the service including the <strong>5% cash back</strong> on all purchases that goes to your school's Parent Teacher Organization. That can buy a lot of trees!
 
 <h4>About Gift Card Commissions</h4>
-We get our Cards from Amazon because they offer a 6% commission on Gift Card purchaces. <br>
-5% goes back to the school. I take 1% to run the site and pay for the credit card transactions. 
+We get our Cards from Amazon because they offer a 6% commission on Gift Card purchaces. 5% goes back to the school. I take 1% to run the site. 
+<br><br>
+<h4>About Our Service Fees</h4>
+It costs us 2.9% of each transaction to process the credit card fees. At checkout, we add 2.9% to cover this charge. If your customer do not wish to pay this fee, we can absorb the cost but will have to reduce the school's commission to 2%.  
 <br>
 <br>
 
