--- a/app/views/campaigns/_form.html.erb
+++ b/app/views/campaigns/_form.html.erb
@@ -23,9 +23,8 @@
     <%= f.label :end_date %><br>
     <%= f.date_select :end_date %>
   </div>
- 
   
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "btn btn-large btn-primary"  %>
   </div>
 <% end %>
