--- a/app/views/recipients/_form.html.erb
+++ b/app/views/recipients/_form.html.erb
@@ -24,11 +24,8 @@
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
-  <div class ="field">
-    <%= f.label :campaign_id %><br>
-    <%= f.select :campaign_id, Campaign.all.collect {|c| [ c.title, c.id ] }, { :include_blank => true }%>
-  </div>
+  
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "btn btn-large btn-primary" %>
   </div>
 <% end %>
