--- a/app/views/recipients/new.html.erb
+++ b/app/views/recipients/new.html.erb
@@ -1,5 +1,17 @@
-<h1>New recipient</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', recipients_path %>
+<% provide(:title, @user.name) %>
+<p></p>
+<div class="row">
+  <aside class="span3">
+    <section>
+      <h4>
+        <%= link_to @user.name, current_user %>
+      </h4>
+      <h6>  <%= link_to "Edit Profile", edit_user_path(current_user) %> |  <%= link_to "Log Out", signout_path, method: "delete" %> </h6>
+      <hr>
+    </section>
+  </aside>
+  <div class="span8">
+    <h3>New recipient for Campaign: <%= @recipient.campaign_id %></h3>
+    <%= render 'form' %>
+  </div>
+</div>
