--- a/app/views/recipients/new.html.erb
+++ b/app/views/recipients/new.html.erb
@@ -11,7 +11,8 @@
     </section>
   </aside>
   <div class="span8">
-    <h3>New recipient for Campaign: <%= @recipient.campaign_id %></h3>
+    <h3>New recipient for Campaign: <br>
+    <%= @campaign.title %></h3>
     <%= render 'form' %>
   </div>
 </div>
