--- a/app/views/recipients/_form.html.erb
+++ b/app/views/recipients/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@recipient) do |f| %>
+<%= form_for([@campaign, @recipient]) do |f| %>
   <% if @recipient.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@recipient.errors.count, "error") %> prohibited this recipient from being saved:</h2>
@@ -10,8 +10,6 @@
       </ul>
     </div>
   <% end %>
-  
-
   <div class="field">
     <%= f.label :first_name %><br>
     <%= f.text_field :first_name %>
@@ -24,7 +22,6 @@
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
-  
   <div class="actions">
     <%= f.submit class: "btn btn-large btn-primary" %>
   </div>
