--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="center hero-unit">
   <h1>Parent Funded Gift Cards</h1>
-  <h1>for Teachers</h1>
+  <h1>for Teachers and Coaches</h1>
   <h2>
     Say <%= link_to "thanks", tour_path %> with a gift they will really appreciate.
   </h2>
@@ -8,4 +8,4 @@
   <%= link_to "Sign up", signup_path, class: "btn btn-large btn-primary" %>
 </div>
 <%= link_to image_tag("img-giftcards.jpg",
-                        alt: "Teachers love Giftcards!"), about_path%>
+                        alt: "Teachers & Coaches Love Giftcards!"), about_path%>
