--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -6,7 +6,7 @@
 <div class="span11">
 <br>
 <body>
-We created ThankTheTeacher.com to facilitate funding and purchasing Gift Cards for teachers and coaches.  We hope you enjoy the service including the <strong>5% cash back</strong> on all purchases that goes back to the Gift Card Campaign Organizer. 
+ThankTheTeacher.com facilitates Gift Card campaigns for teachers and coaches. 
 
 <h4>About Gift Cards</h4>
 We get our Cards from Amazon.com. Amazon.com gives us a 6% commission on our Gift Card purchaces. We give 5% back to the person that organized the Gift Card Campaign. Thank the Teacher takes 1% to run the site. 
@@ -17,13 +17,13 @@ It costs us about 3% of each transaction to process credit cards on a secure ser
 <br>
 
 If you have questions, suggestions, or need help,
-please contact <a href="mailto: matthew.r.newell@gmail.com">Matt</a>.
+please contact <a href="mailto: matthew.r.newell@gmail.com">Matt</a>. 
 </body>
 <br>
 <br>
 <br>
 <p>
-  <small>This site was built on software developed by <a href = "http://ruby.railstutorial.org/ruby-on-rails-tutorial-book">Michael Hartl</a>.</small>  
+  <small>Thank the Teacher is a <a href = "http://usefulwebservice.com">Useful Web Service</a>.</small>  
 </p>
 
 </div>
