--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-  Thank the Teacher
+  Thank the Teacher is a <strong><%= link_to "Useful Web Service", "http://www.usefulwebservice.com" %> </strong>
   </small>
   <nav>
   <ul>
