--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Campaigns", campaigns_path  %></li>
-          <li><%= link_to "Tour",  tour_path %></li>
+          <li><%= link_to "Help",  help_path %></li>
           <li><%= link_to "About",  about_path %></li>
           <% if signed_in? %>
             <li id="fat-menu" class="dropdown">
