--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,31 +1,19 @@
 <% provide(:title, 'About us') %>
 <%= image_tag("earthday.jpg") %>
 <div class="row">
-<div class="span0">
-</div>
+  
 <div class="span11">
-<br>
-<body>
-ThankTheTeacher.com facilitates Gift Card campaigns for teachers and coaches. 
 
-<h4>About Gift Cards</h4>
-We get our Cards from Amazon.com. Amazon.com gives us a 6% commission on our Gift Card purchaces. We give 5% back to the person that organized the Gift Card Campaign. Thank the Teacher takes 1% to run the site. 
-<br><br>
-<h4>Service Fees</h4>
-It costs us about 3% of each transaction to process credit cards on a secure server. At checkout, we add a small fee to cover this cost. 
-<br>
-<br>
+  <h4>About Us</h4>
+  <p>ThankTheTeacher.com facilitates the Gift Card process for teachers and coaches. We let parents select how much they would like to contribue to each teacher and then sum up the contributions and help order a gift card.</p>
 
-If you have questions, suggestions, or need help,
-please contact <a href="mailto: matthew.r.newell@gmail.com">Matt</a>. 
-</body>
-<br>
-<br>
-<br>
-<p>
-  <small>Thank the Teacher is a <a href = "http://usefulwebservice.com">Useful Web Service</a>.</small>  
-</p>
+  <h4>Our Gift Cards</h4>
+  <p>We get our Cards from Amazon.com. Amazon.com gives us a 6% commission on our Gift Card purchaces. We give 5% back to the person that organized the Gift Card Campaign. Thank the Teacher takes 1% to run the site. </p>
 
-</div>
+  <h4>Service Fees</h4>
+  <p>It costs us about 3% of each transaction to process credit cards on a secure server. At checkout, we add a small fee to cover this cost. </p>
+
+  <p>If you have questions, suggestions, or need help,please contact <a href="mailto: matthew.r.newell@gmail.com">Matt</a>. </p>
+  </div>
 </div>
 
